# echem-fairifier

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  hotfix_duplicate_ids.py  index.html  pyproject.toml  railway.toml  requirements.txt  run_app.py  run_tests.py  setup.cfg  sitemap.xml  test_plotting.py  test_setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  technique_request.md
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: CONTRIBUTING.md  DEPLOYMENT.md  USER_GUIDE.md
src/: _app.py  app.py
src/echem_fairifier/: __init__.py  _version.py  app.py
src/echem_fairifier/config/: __init__.py  techniques.py
src/echem_fairifier/core/: __init__.py  emmo_integration.py  metadata_generator.py  validator.py
src/echem_fairifier/schemas/: fair_metadata.json
src/echem_fairifier/ui/: __init__.py  components.py
tests/: conftest.py  test_metadata_generator.py  test_validator.py
